# newslingo

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  ai_radar.py  digest.py  feed_ingest.py  job.py  migrate2.py  pricing.py  pyproject.toml  rates.json  send_daily_digest.py  summary_ai.py  summary_top_stories.py  weekly_summary.py  zaobao_scraper.py
.github/: dependabot.yml
.github/scripts/: update_rates.py
.github/workflows/: ai_radar.yml  ci_test.yml  digest.yml  digest_email.yml  feed_ingest.yml  job.yml  ops_keep_alive.yml  summary_ai.yml  summary_ai_radar.yml  summary_overlay.yml  summary_top_stories.yml  test.yml  update-rates.yml  weekly_summary.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/components/: AIInsightsDrawer.tsx  AIRadarDrawer.tsx  AboutDrawer.tsx  CostsDrawer.tsx  DigestPreviewDrawer.tsx  HeaderBrandMark.tsx  HeadlineCard.tsx  InsideAIDrawer.tsx  LearningDigestDrawer.tsx  QuizDrawer.tsx  StatsDrawer.tsx  ThisWeekDrawer.tsx  TrafficDrawer.tsx  WordSheet.tsx
frontend/src/config/: sources.ts
frontend/src/contexts/: SpeechContext.tsx
scrapers/: astro.py  zaobao.py
supabase/migrations/: 20260520000000_create_ai_radar.sql  schema.sql
tests/: conftest.py  test_ai_radar.py  test_astro_scraper.py  test_call_claude.py  test_feed_ingest.py  test_invariants.py  test_pricing.py  test_send_daily_digest.py  test_summary_ai.py  test_summary_top_stories.py  test_weekly_summary.py  test_zaobao_scraper.py
(+2 files in other folders)
