[project]
name = "newslingo"
version = "0.1.0"
requires-python = ">=3.10,<3.14"
dependencies = [
    "supabase==2.30.0",
    "python-dotenv==1.2.2",
    "anthropic>=0.100.0,<1.0",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.1.0",
    "psycopg2-binary>=2.9.12",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 120
exclude = ["migrations/archive"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "UP"]
ignore = [
    "E501",   # line too long — handled by formatter, not linter
    "B008",   # do not perform function calls in default arguments
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]   # allow some test patterns ruff-B flags
